[package]
name = "pyage"
version = "0.1.0"
authors = ["Kushal Das <mail@kushaldas.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pyage"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.11.1"

[features]
default = ["pyo3/extension-module"]

[dependencies]
secrecy = "0.6.0"

[dependencies.age]
version = "0.4"
features = ["cli-common"]

[package.metadata.maturin]
classifier = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT",
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
maintainer = "Kushal Das"
maintainer-email = "mail@kushaldas.in"
requires-python = ">=3.7"
project-url = ["Github, https://github.com/kushaldas/pyage"]
